Complete JavaFX tutorial part 1